# c_demo

./: CMakeLists.txt  README.md  asm.c  bit_perf.md  bit_perf.txt  bit_twiddling.c  bit_twiddling_inline.c  bit_twiddling_perf.c  branch.c  branch_predict.c  cache_miss.c  client.c  code.c  concurrent_false_sharing.c  context_switch.c  context_switch.md  context_switch.txt  context_switch_false_sharing.c  context_switch_false_sharing.md  context_switch_false_sharing_cas.c  cpu_consistency.c  cpu_consistency_atomic_thread_fence.md  cpu_consistency_spinwait.c  cpu_consistency_spinwait.md  def.c  file.c  file_preload.c  frame.asm  frame.c  func_intercept.c  func_intercept_main.c  jvm.c  jvm.puml  jvm_abstract.txt  jvm_agent.txt  jvm_asm_gdb.txt  jvm_base.txt  jvm_build.sh  jvm_build_linux.sh  jvm_build_zero_linux.sh  (+38 more)
docs/: CodeBlob.md  exception_handler.md  unwind_exception.md
docs/glibc/: README.md  lll_lock.md  munmap.md  pthread_cond_timedwait.md  pthread_create.md  pthread_mutex_lock.md
docs/hotspot/: Implicit_exception_table_c2.md  deoptimization.md  fill_in_stack_trace.md  generate_handle_exception_c1.md  implicit_exception_deopt.md  nmethod.md  pc_desc.md  relocation.md  try_to_inline.md  uncommon_trap.md
docs/hotspot15/: Thread-Local_Handshakes.md  deopt_osr.md  implicit_exception_deopt.md  interpreter_frame.md  loop_unroll.md  loop_unroll_asm_critical_path.md  optional_cset.md  putField_cardTable.md  redirty_queue.md  signal_handle.md  signal_handler.md  thread_gc_root.md
docs/jvm/: jvm.puml  jvm_abstract.txt  jvm_agent.txt  jvm_base.txt  jvm_build_linux.sh  (+6 more)
(+17 files in other folders)
